packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/correct/custom_architecture.srcinfo
pkgbase = test
	pkgver = 1.0.0
	pkgrel = 1
	arch = my_special_arch

pkgname = test
